# etl

./: README.md  pyproject.toml
src/drivers/: html_collector.py  http_requester.py
src/drivers/interfaces/: html_collector.py  http_requester.py
src/drivers/mocks/: http_requester_mock.py
src/drivers/tests/: html_collector.py  http_requester.py
src/errors/: extract_error.py  load_error.py  transform_error.py
src/infra/: database_connector.py  database_repository.py
src/infra/interfaces/: database_repository_interface.py
src/main/: __init__.py  main_pipeline.py
src/stages/contracts/: extract_contract.py  transform_contract.py
src/stages/contracts/mocks/: extract_contract.py  transform_contract.py
src/stages/extract/: extract_html.py
src/stages/load/: load_data.py
src/stages/transform/: transform_raw_data.py
tests/: database_connector_test.py  database_repository_test.py  extract_html_test.py  html_collector_test.py  http_requester_test.py  load_data_test.py  transform_raw_data_test.py
